# GrafanAgent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval-nightly.yml
agents/: _base.py  _hitl.py  _llm.py  _mcp.py
agents/attribution/: agent.py  app.py  main.py  orchestrator.py  schemas.py
agents/lead_scoring/: agent.py  app.py  main.py  orchestrator.py  schemas.py
agents/lifecycle/: agent.py  app.py  main.py  orchestrator.py  schemas.py
agents/router/: app.py  classifier.py  fallback.py  main.py  rules.py  schemas.py
apps/slack-approver/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
cli/: __init__.py  _http.py  _registry.py  main.py
cli/commands/: describe.py  eval_cmd.py  list_cmd.py  replay.py  trigger.py
dashboards/: alerts.json  grafanagent.json
docs/: DESIGN.md  FIRST_ISSUES.md  adding_a_new_skill.md  runbook.md
docs/blog/: building-ai-agents-with-lgtm.md
evals/: golden.py  golden_set.jsonl  judge.py  metrics.py  runner.py  schemas.py
evals/examples/: golden-aha-001.json
infra/otel/: collector.yaml
mcp_servers/: _base.py
observability/: __init__.py  cost.py  otel.py  pii.py  signal_ctx.py
rag/: __init__.py  embeddings.py  ingest.py  retriever.py  schemas.py  store.py
scripts/: demo_lifecycle.py  deploy.sh  seed.sh
tests/: conftest.py  test_cost.py  test_dashboard_json.py  test_deploy_surface.py  test_hitl.py  test_llm_enriched.py  test_pii.py  test_repo_polish.py  test_signal_ctx.py  test_terraform_layout.py
(+77 files in other folders)
